force-app/main/default/objects/Activity/fields/MUSW__Alert_Indicator__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Alert_Indicator__c</fullName>
    <formula>IMAGE(
CASE( MUSW__AlertCode__c, 
0, "/img/samples/light_green.gif", 
1, "/img/samples/light_yellow.gif", 
2, "/img/samples/light_red.gif", 
"/s.gif"),
"none")</formula>
    <label>Alert</label>
    <type>Text</type>
</CustomField>