force-app/main/default/objects/Activity/fields/MUSW__Completed_Date2__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Completed_Date2__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>