force-app/main/default/objects/Activity/fields/MUSW__Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Completed_Date__c</fullName>
    <label>Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>