force-app/main/default/objects/Activity/fields/MUSW__Days_till_Completed2__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Days_till_Completed2__c</fullName>
    <formula>IF( ISNULL(MUSW__Completed_Date2__c) , NULL, (NOW() - CreatedDate) - (TODAY() - MUSW__Completed_Date2__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>