force-app/main/default/objects/Activity/fields/MUSW__Days_Till_Completed__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Days_Till_Completed__c</fullName>
    <description>Number of days between the created datetime and the completed datetime</description>
    <formula>IF( ISNULL(MUSW__Completed_Date__c) , NULL,   (NOW() - CreatedDate) - (NOW() - MUSW__Completed_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>24 Hr Days to Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>