force-app/main/default/objects/Activity/fields/MUSW__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Due_Date__c</fullName>
    <inlineHelpText>System Calculated when Task is not Closed</inlineHelpText>
    <label>Due Date Only</label>
    <type>Date</type>
</CustomField>