force-app/main/default/objects/Activity/fields/MUSW__DurationInHours__c.field-meta.xml
<CustomField>
    <fullName>MUSW__DurationInHours__c</fullName>
    <description>NO LONGER USED. Use Duration field instead.</description>
    <label>Duration (hours) DO NOT USE</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>