force-app/main/default/objects/Activity/fields/MUSW__Longitude__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Longitude__c</fullName>
    <label>Longitude</label>
    <precision>14</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>