force-app/main/default/objects/Activity/fields/MUSW__Milestone__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestone</label>
    <type>Checkbox</type>
</CustomField>