force-app/main/default/objects/Activity/fields/MUSW__Outcome__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affirmed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Granted</fullName>
            </value>
            <value>
                <fullName>Overturned</fullName>
            </value>
            <value>
                <fullName>Stayed</fullName>
            </value>
            <value>
                <fullName>Tabled</fullName>
            </value>
            <value>
                <fullName>Upheld</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>