force-app/main/default/objects/Activity/fields/MUSW__Predecessor_TaskId__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Predecessor_TaskId__c</fullName>
    <inlineHelpText>Can only be set after the Milestone and its Tasks have been saved first</inlineHelpText>
    <label>Predecessor Task</label>
    <length>18</length>
    <type>Text</type>
</CustomField>