force-app/main/default/objects/Activity/fields/MUSW__Shared_Link__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Shared_Link__c</fullName>
    <description>used for Alert Tasks on parents being shared to a Parcel</description>
    <label>Parcel Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>