force-app/main/default/objects/Activity/fields/MUSW__Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Status_Icon__c</fullName>
    <formula>IMAGE( 
 IF(AND(ISNULL(MUSW__Completed_Date2__c), MUSW__Due_Date__c&lt; TODAY()), "/img/entitlement/casemilestone_isviolated.png", 
  IF (MUSW__Completed_Date2__c &lt;= MUSW__Due_Date__c, "/img/entitlement/casemilestone_iscompleted.gif", 
   IF (MUSW__Completed_Date2__c > MUSW__Due_Date__c, "/img/icon/warning16.png", 
   "/s.gif"
   )
  )
 ),
""
)</formula>
    <label>Action</label>
    <type>Text</type>
</CustomField>